objects/XDO_Tool_Tracking_Event__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Identifier__c</fullName>
        <label>Asset Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>User__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error__c</fullName>
        <label>Error</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Once__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Only raise a single instance of the event determined by the value in the Action property</description>
        <inlineHelpText>Only raise a single instance of the event determined by the value in the Action property</inlineHelpText>
        <label>Once?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Page__c</fullName>
        <label>Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payload__c</fullName>
        <label>Payload</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>Indicates the progress of a Tracking Event record as it is processed by the services</description>
        <inlineHelpText>Indicates the progress of a Tracking Event record as it is processed by the services</inlineHelpText>
        <label>Stage</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Mixpanel Event</fullName>
                </value>
                <value>
                    <fullName>Mixpanel Profile</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Unique Id</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tracking_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Tracking Event</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Once__c</columns>
        <columns>Type__c</columns>
        <columns>Event__c</columns>
        <columns>Asset_Identifier__c</columns>
        <columns>Action__c</columns>
        <columns>Payload__c</columns>
        <columns>Stage__c</columns>
        <columns>Error__c</columns>
        <columns>Email__c</columns>
        <columns>User__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TE-{00000000}</displayFormat>
        <label>Tracking Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tracking Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>